CHANGELOG
---------------
2020-12-13 03:41 PST
- Added transitions
- Modified UIManager to use less redundant code (but there's still some left)
---------------
2020-12-13 02:35 PST
- Added the win condition
- Added all dialogue into the game
---------------
2020-12-13 01:01 PST
- Added the dialogue for when you fail to please Zuckerbork
---------------
2020-12-13 00:54 PST
- Added UI to display the number of chances the player has left before it is game over
- Added transitions for the start and end of the game
- Fixed a bug where the player could press on a button when they're not supposed to
---------------
2020-12-13 00:15 PST
- Added lose condition
- Added UI for game over screen
---------------
2020-12-12 23:27 PST
- Added functionality for checking cutscenes
- Added card meanings (upright and reversed)
- Added more of monnettie's dialogue
- Added a cutscene manager for handling cutscenes (cards popping up on the screen)
---------------
2020-12-12 21:01
- Fixed bug with project where buttons did not show up on-screen
---------------
2020-12-12 19:17 PST
- Added ChoiceManager script to handle choice-specific tasks
- Modified game manager to remove buttons & cards when they're not needed
- Modified ResourcesManager to hold references to choice-specific files
- Modified choice system to display results after making a choice
---------------
2020-12-12 18:10 PST
- Added prototype choice system
- Added a UI for the buttons
- Added more .txt files to aid with testing
- Renamed SpriteManager to ResourceManager
- Modified text box style
---------------
2020-12-12 13:37 PST
- Added functionality for changing backgrounds
- Added functionality for changing character sprites
- Added functionality for adjusting image widths and heights
- Modified UIManager to distinguish thoughts and speech 
- Modified Parser to process thoughts
- Modified debug dialogue to better reflect the writing's format
---------------
2020-12-12 12:56 PST